--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -5,10 +5,12 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script> -->
+    {% load static %}
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <script src='{% static "js/home.js" %}'></script>
 </head>
 <body>
     <h1>HOME</h1>
+    <button onclick="conn();">conn</button>
 </body>
 </html>
