--- a/templates/commons/home.html
+++ b/templates/commons/home.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     {% load static %}
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src='{% static "js/home.js" %}'></script>
 </head>
 <body>
