--- a/templates/commons/index.html
+++ b/templates/commons/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>INDEX</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     {% load static %}
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href='index.css'> -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script src='{% static "js/home.js" %}'></script>
+    <script src='{% static "js/index.js" %}'></script>
 </head>
 <body>
-    <h1>HOME</h1>
-    <button onclick="conn();">conn</button>
+    <h1>INDEX</h1>
+    <button onclick="conn();">connection test</button>
 </body>
 </html>
