--- a/templates/commons/index.html
+++ b/templates/commons/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>INDEX</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    {% load static %}
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='index.css'> -->
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script src='{% static "js/index.js" %}'></script>
-</head>
-<body>
-    <h1>INDEX</h1>
-    <button onclick="conn();">connection test</button>
-</body>
-</html>
+{% extends 'commons/base.html' %}
+
+{% block title %}INDEX{% endblock title %}
+
+{% block static %}
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src='{% static "js/index.js" %}'></script>
+{% endblock static %}
+
+{% block body %}
+<h1>INDEX</h1>
+<button onclick="conn();">connection test</button>
+{% endblock body %}
