--- a/templates/commons/base.html
+++ b/templates/commons/base.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>{% block title %}{% endblock title %}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    {% block static %}
-    {% endblock static %}
+    {% block style %}{% endblock style %}
+    {% block script %}{% endblock script %}
 </head>
 <body>
     {% block body %}
