--- a/templates/d2api/index.html
+++ b/templates/d2api/index.html
@@ -7,21 +7,33 @@
 {% endblock style %}
 
 {% block script %}
-<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script>
     function getAuth() {
         $.ajax({
             url: "{% url 'd2api:get_auth' %}"
         }).done(function (res) {
-            location.href = res['auth_response_url']
+            location.href = res['auth_response_url'];
         }).fail(function (e) {
+            console.log(e);
+        });
+    }
+
+    function refreshToken() {
+        $.ajax({
+            url: "{% url 'd2api:refresh_token' %}"
+        }).done(function (res) {
+            console.log("success");
+            console.log(res);
+        }).fail(function (e) {
+            console.log("error");
             console.log(e);
         });
     }
 
     function requstData() {
         $.ajax({
-            url: "{% url 'd2api:req_data' %}",
+            url: "{% url 'd2api:request_data' %}",
             type: "post",
             data: JSON.stringify({
                 'auth_res': location.search
@@ -43,5 +55,6 @@
 {% block body %}
 <h1>DESTINY 2 - TAKE A LOOK</h1>
 <button onclick="getAuth();">Get Authorization</button>
-<button onclick="requstData();">REQUEST DATA</button>
+<button onclick="refreshToken();">Refresh Token</button>
+<button onclick="requstData();">Request Data</button>
 {% endblock body %}
