--- a/templates/d2api/index.html
+++ b/templates/d2api/index.html
@@ -9,11 +9,30 @@
 {% block script %}
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script>
+    let accessToken = "";
+
     function getAuth() {
         $.ajax({
             url: "{% url 'd2api:get_auth' %}"
         }).done(function (res) {
-            location.href = res['auth_response_url'];
+            location.href = res['authorization_url'];
+        }).fail(function (e) {
+            console.log(e);
+        });
+    }
+
+    function fetchToken() {
+        $.ajax({
+            url: "{% url 'd2api:fetch_token' %}",
+            type: "post",
+            data: JSON.stringify({
+                'auth_res': location.search
+            }),
+            headers: {
+                'X-CSRFTOKEN': "{{ csrf_token }}"
+            }
+        }).done(function (res) {
+            accessToken = res['access_token'];
         }).fail(function (e) {
             console.log(e);
         });
@@ -32,15 +51,9 @@
     }
 
     function requstData() {
+        // alert(accessToken);
         $.ajax({
-            url: "{% url 'd2api:request_data' %}",
-            type: "post",
-            data: JSON.stringify({
-                'auth_res': location.search
-            }),
-            headers: {
-                'X-CSRFTOKEN': "{{ csrf_token }}"
-            }
+            url: "{% url 'd2api:request_data' %}"
         }).done(function (res) {
             console.log("success");
             console.log(res);
@@ -55,6 +68,7 @@
 {% block body %}
 <h1>DESTINY 2 - TAKE A LOOK</h1>
 <button onclick="getAuth();">Get Authorization</button>
+<button onclick="fetchToken();">Fetch Token</button>
 <button onclick="refreshToken();">Refresh Token</button>
 <button onclick="requstData();">Request Data</button>
 {% endblock body %}
