--- a/templates/d2api/index.html
+++ b/templates/d2api/index.html
@@ -7,14 +7,12 @@
 {% endblock style %}
 
 {% block script %}
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script></script>
 {% endblock script %}
 
 {% block body %}
 <h1>DESTINY 2 - TAKE A LOOK</h1>
 
-<table>
+<table border="1">
     <tr>
         <td></td>
         <td>Item name</td>
@@ -27,6 +25,7 @@
         <td>Discipline</td>
         <td>Intellect</td>
         <td>Strength</td>
+        <td>Recommend</td>
     </tr>
 </table>
 {% endblock body %}
